--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "pthread.h": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "cstdlib": "c"
     }
 }
