--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
         "stdlib.h": "c",
         "pthread.h": "c",
         "system_error": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "array": "c",
+        "string_view": "c",
+        "initializer_list": "c",
+        "ranges": "c",
+        "utility": "c"
     }
 }
